<resources>
    <string name="app_name">Assignment1</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="randomavatar">RandomAvatar</string>
    <string name="profile">Profile</string>
    <string name="search">search</string>
    <string name="material">Material</string>
    <string name="quizes">Quizes</string>
    <string name="settings">Settings</string>
    <string name="logo" />
    <string name="quiz">Quiz</string>
    <string name="materials">Material</string>
    <string name="setting">Setting</string>
    <string name="home">Home</string>
    <string name="subject">Subject</string>
    <string name="slides">Slides</string>
    <string name="structure">structure</string>
    <string name="test">Test</string>
    <string name="progress">Progress</string>
    <string name="communtiy_hub">Communtiy Hub</string>
    <string name="community">Community\n</string>
    <string name="study">Material</string>
    <string name="profile_icon">profile icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sorting_algorithms">Sorting Algorithms</string>
</resources>